adjust formatAnnouncements and formatInterests